tests/outref/TCTC012.ref
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- A: Column UNIQUE unnamed constraint NOT NULL Test (most common on Github)
DROP TABLE IF EXISTS user1;
CREATE TABLE user1 (
	     id int,
	     username varchar(20) UNIQUE NOT NULL,
	     email varchar(100) UNIQUE NOT NULL,
	     pass varchar(64) NOT NULL
);
-- These two will succeed
SELECT XECUTE_M_CODE('zwrite ^%ydboctoU2tuomEAySubezrd0DoxaEI');
INSERT INTO user1 VALUES(1,'sam','sam@zzz.com','catdog.33');
INSERT INTO user1 VALUES(3,'bam','bam@zzz.com','catdog.33');
-- The following two will fail
INSERT INTO user1 VALUES(2,'sam','sam@zzz.com','catdog.33');
INSERT INTO user1 VALUES(4,'sam','','');
SELECT * FROM user1;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoU2tuomEAySubezrd0DoxaEI');
UPDATE user1 SET email = 'sam@zzz.com' where id = 3;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoU2tuomEAySubezrd0DoxaEI');
DELETE FROM user1 WHERE id = 3;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoU2tuomEAySubezrd0DoxaEI');
\d user1;
DROP TABLE user1;

DROP TABLE
CREATE TABLE
[ERROR]: ERR_YOTTADB: YottaDB error: 150372994,XecuteMCode+2^xecutemcode,%YDB-E-GVUNDEF, Global variable undefined: ^%ydboctoU2tuomEAySubezrd0DoxaEI
INSERT 0 1
INSERT 0 1
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "user1_username_key" : Key (username)=(sam) already exists
[ERROR]: ERR_NULL_COL_VALUE: NULL value in column email violates NOT NULL constraint
id|username|email|pass
1|sam|sam@zzz.com|catdog.33
3|bam|bam@zzz.com|catdog.33
(2 rows)
^%ydboctoU2tuomEAySubezrd0DoxaEI("bam@zzz.com")=""
^%ydboctoU2tuomEAySubezrd0DoxaEI("sam@zzz.com")=""
xecute_m_code
0
(1 row)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "user1_email_key" : Key (email)=(sam@zzz.com) already exists
^%ydboctoU2tuomEAySubezrd0DoxaEI("bam@zzz.com")=""
^%ydboctoU2tuomEAySubezrd0DoxaEI("sam@zzz.com")=""
xecute_m_code
0
(1 row)
DELETE 1
^%ydboctoU2tuomEAySubezrd0DoxaEI("sam@zzz.com")=""
xecute_m_code
0
(1 row)
Table "user1" stored in Global: ^%ydboctoD6FVCe4lHdzc5udpf3IvwJI : Type = READWRITE
Column|Type|Collation|Nullable|Default
id|INTEGER|||
username|VARCHAR(20)||NOT NULL|
email|VARCHAR(100)||NOT NULL|
pass|VARCHAR(64)||NOT NULL|
Indexes:
    "user1_username_key" UNIQUE CONSTRAINT, Column(s) (username), Global ^%ydboctoUoJMBP6gLVMGwUFSYYcKI1B
    "user1_email_key" UNIQUE CONSTRAINT, Column(s) (email), Global ^%ydboctoU2tuomEAySubezrd0DoxaEI
DROP TABLE
-------------------------
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- B: Table UNIQUE named constraint on multiple NOT NULL fields
DROP TABLE IF EXISTS subscriptions;
CREATE TABLE subscriptions (
	   uid              INT NOT NULL,
	   user_id          INT NOT NULL,
	   service_id       VARCHAR(64)  NOT NULL,
	   url              VARCHAR(512) NOT NULL,
	   --CONSTRAINT pk_subscriptions PRIMARY KEY (uid),
	   CONSTRAINT unique_subscriptions UNIQUE (user_id, service_id, url)
);
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5');
INSERT INTO subscriptions VALUES
(1, 1, 'aa', 'http://foo.com'),
(3, 1, 'cc', 'http://foo.com');
SELECT * FROM subscriptions;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5');
-- These two will fail
INSERT INTO subscriptions VALUES (2, 1, 'aa', 'http://foo.com');
UPDATE subscriptions SET service_id = 'aa' WHERE uid = 3;
SELECT * FROM subscriptions;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5');
\d subscriptions;
DROP TABLE IF EXISTS subscriptions;
DROP TABLE
CREATE TABLE
[ERROR]: ERR_YOTTADB: YottaDB error: 150372994,XecuteMCode+2^xecutemcode,%YDB-E-GVUNDEF, Global variable undefined: ^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5
INSERT 0 2
uid|user_id|service_id|url
1|1|aa|http://foo.com
3|1|cc|http://foo.com
(2 rows)
^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5(1,"aa","http://foo.com")=""
^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5(1,"cc","http://foo.com")=""
xecute_m_code
0
(1 row)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "unique_subscriptions" : Key (user_id, service_id, url)=(1, aa, http://foo.com) already exists
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "unique_subscriptions" : Key (user_id, service_id, url)=(1, aa, http://foo.com) already exists
uid|user_id|service_id|url
1|1|aa|http://foo.com
3|1|cc|http://foo.com
(2 rows)
^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5(1,"aa","http://foo.com")=""
^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5(1,"cc","http://foo.com")=""
xecute_m_code
0
(1 row)
Table "subscriptions" stored in Global: ^%ydboctoD9Okcb1Om0eO2SpzE51jcC6 : Type = READWRITE
Column|Type|Collation|Nullable|Default
uid|INTEGER||NOT NULL|
user_id|INTEGER||NOT NULL|
service_id|VARCHAR(64)||NOT NULL|
url|VARCHAR(512)||NOT NULL|
Indexes:
    "unique_subscriptions" UNIQUE CONSTRAINT, Column(s) (user_id, service_id, url), Global ^%ydboctoUAmZMXJ5Co5UNpwPQfk5TL5
DROP TABLE
-------------------------
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- C: Table UNIQUE Named constraint on a single NULLABLE field
DROP TABLE IF EXISTS objecttypes;
CREATE TABLE objecttypes (
	  id INT NOT NULL,
	  objecttype VARCHAR(255),
	  CONSTRAINT idx_objecttypes_objecttype UNIQUE (objecttype)
);
\d objecttypes;
SELECT XECUTE_M_CODE("zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D");
INSERT INTO objecttypes values (1, 'aaa');
SELECT * FROM objecttypes;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D');
-- This will fail
INSERT INTO objecttypes values (2, 'bbb'), (3, 'aaa');
SELECT * FROM objecttypes;
-- This will succeed
INSERT INTO objecttypes values (2, 'bbb');
SELECT * FROM objecttypes;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D');
-- This will fail
UPDATE objecttypes SET objecttype = 'aaa' WHERE id = 2;
SELECT * FROM objecttypes;
DELETE FROM objecttypes where id = 2;
SELECT * FROM objecttypes;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D');
DELETE FROM objecttypes where id = 1;
SELECT * FROM objecttypes;
SELECT XECUTE_M_CODE('zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D');
DROP TABLE IF EXISTS objecttypes;
DROP TABLE
CREATE TABLE
[ERROR]: ERR_UNKNOWN_COLUMN_NAME: Unknown column: zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D
LINE 8:1: SELECT XECUTE_M_CODE("zwrite ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D");
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Table "objecttypes" stored in Global: ^%ydboctoDGqLA6Acg3KGojClvUpw7IC : Type = READWRITE
Column|Type|Collation|Nullable|Default
id|INTEGER||NOT NULL|
objecttype|VARCHAR(255)|||
Indexes:
    "idx_objecttypes_objecttype" UNIQUE CONSTRAINT, Column(s) (objecttype), Global ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D
INSERT 0 1
id|objecttype
1|aaa
(1 row)
^%ydboctoUIJe0YA67EEcnjNUb2OoV1D("aaa")=""
xecute_m_code
0
(1 row)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "idx_objecttypes_objecttype" : Key (objecttype)=(aaa) already exists
id|objecttype
1|aaa
(1 row)
INSERT 0 1
id|objecttype
1|aaa
2|bbb
(2 rows)
^%ydboctoUIJe0YA67EEcnjNUb2OoV1D("aaa")=""
^%ydboctoUIJe0YA67EEcnjNUb2OoV1D("bbb")=""
xecute_m_code
0
(1 row)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "idx_objecttypes_objecttype" : Key (objecttype)=(aaa) already exists
id|objecttype
1|aaa
2|bbb
(2 rows)
DELETE 1
id|objecttype
1|aaa
(1 row)
^%ydboctoUIJe0YA67EEcnjNUb2OoV1D("aaa")=""
xecute_m_code
0
(1 row)
DELETE 1
id|objecttype
(0 rows)
[ERROR]: ERR_YOTTADB: YottaDB error: 150372994,XecuteMCode+2^xecutemcode,%YDB-E-GVUNDEF, Global variable undefined: ^%ydboctoUIJe0YA67EEcnjNUb2OoV1D
DROP TABLE
-------------------------
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- D: UNIQUE Named constraint on a NOT NULL field
DROP TABLE IF EXISTS Customer;
CREATE TABLE Customer(
	Id INT PRIMARY KEY,
	Name VARCHAR(100) NOT NULL,
	EmailAddress VARCHAR(100) NOT NULL,
	CONSTRAINT Unq_Customer_Email UNIQUE(EmailAddress)
);
INSERT INTO Customer VALUES
(1, 'aaa', 'a@example.com'),
(2, 'bbb', 'b@example.com');
SELECT * FROM Customer;
-- Next two wil fail
INSERT INTO Customer VALUES (3, 'ccc', 'a@example.com');
UPDATE Customer SET EmailAddress = 'a@example.com' WHERE Id = 2;
-- Verify data is still the same
SELECT * FROM Customer;
DROP TABLE Customer;
DROP TABLE
CREATE TABLE
INSERT 0 2
id|name|emailaddress
1|aaa|a@example.com
2|bbb|b@example.com
(2 rows)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "unq_customer_email" : Key (emailaddress)=(a@example.com) already exists
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "unq_customer_email" : Key (emailaddress)=(a@example.com) already exists
id|name|emailaddress
1|aaa|a@example.com
2|bbb|b@example.com
(2 rows)
DROP TABLE
-------------------------
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- E: Table UNIQUE unnamed constraint on a NOT NULL field
DROP TABLE IF EXISTS User2;
CREATE TABLE User2
(
	    id               INT          NOT NULL PRIMARY KEY,
	    firstnam         VARCHAR(255) NOT NULL,
	    lastname         VARCHAR(255) NOT NULL,
	    email            VARCHAR(255) NOT NULL,
	    UNIQUE (email)
);
INSERT INTO User2 VALUES (1,'a','b','a@example.com'), (2,'a','b','b@example.com');
SELECT * FROM User2;
-- These two will fail
INSERT INTO User2 VALUES (3,'a','b','a@example.com');
UPDATE User2 SET email = 'a@example.com' WHERE id = 2;
SELECT * FROM User2;
\d User2;
DROP TABLE User2;
DROP TABLE
CREATE TABLE
INSERT 0 2
id|firstnam|lastname|email
1|a|b|a@example.com
2|a|b|b@example.com
(2 rows)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "user2_email_key" : Key (email)=(a@example.com) already exists
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "user2_email_key" : Key (email)=(a@example.com) already exists
id|firstnam|lastname|email
1|a|b|a@example.com
2|a|b|b@example.com
(2 rows)
Table "user2" stored in Global: ^%ydboctoDqjLykrTQDdq11IkWYH6WGC(id) : Type = READWRITE
Column|Type|Collation|Nullable|Default
id|INTEGER||NOT NULL|
firstnam|VARCHAR(255)||NOT NULL|
lastname|VARCHAR(255)||NOT NULL|
email|VARCHAR(255)||NOT NULL|
Indexes:
    "user2_pkey" PRIMARY KEY CONSTRAINT, Column(s) (id), Global: ^%ydboctoDqjLykrTQDdq11IkWYH6WGC(id)
    "user2_email_key" UNIQUE CONSTRAINT, Column(s) (email), Global ^%ydboctoU18NCO2s7YjbSa2sU8Lqq5B
DROP TABLE
-------------------------
-- TCTC012 : OCTO582 : Various User Level UNIQUE Tests
-- F: Table UNIQUE unnamed constraint on multiple NOT NULL fields (like B, except unnamed)
DROP TABLE IF EXISTS balances;
CREATE TABLE balances(
	distribution_id INT NOT NULL,
	address CHAR(32) NOT NULL,
	usd_balance DECIMAL(15, 4) NOT NULL,
	details TEXT,
	UNIQUE (distribution_id, address)
);

INSERT INTO balances VALUES
(1,'aaa',22.3355,'foo'),
(2,'aaa',22.5566,NULL);
SELECT * from balances;
-- These two will fail
INSERT INTO balances VALUES (1,'aaa',22.3365,'boo');
UPDATE balances SET distribution_id = 1 where distribution_id = 2;
SELECT * from balances;
DROP TABLE balances;
DROP TABLE
CREATE TABLE
INSERT 0 2
distribution_id|address|usd_balance|details
1|aaa|22.3355|foo
2|aaa|22.5566|
(2 rows)
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "balances_distribution_id_address_key" : Key (distribution_id, address)=(1, aaa) already exists
[ERROR]: ERR_DUPLICATE_KEY_VALUE: Duplicate Key Value violates UNIQUE constraint "balances_distribution_id_address_key" : Key (distribution_id, address)=(1, aaa) already exists
distribution_id|address|usd_balance|details
1|aaa|22.3355|foo
2|aaa|22.5566|
(2 rows)
DROP TABLE
-------------------------
